--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "enzyme-adapter-react-16": "1.0.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "moment": "2.18.1",
+    "moment": "2.19.3",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
-    "react": "15.6.1",
+    "numeral": "2.0.6",
+    "raf": "3.3.2",
+    "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
-    "react-dates": "12.3.0",
-    "react-dom": "15.6.1",
+    "react-dates": "12.7.0",
+    "react-dom": "16.0.0",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
@@ -41,10 +44,10 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "enzyme": "2.9.1",
-    "enzyme-to-json": "1.5.1",
+    "enzyme": "3.0.0",
+    "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
-    "react-test-renderer": "15.6.1",
+    "react-test-renderer": "16.0.0",
     "webpack-dev-server": "2.5.1"
   }
 }
